# seo-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/seo/: Cargo.toml
crates/seo/src/: cli.rs  client.rs  config.rs  main.rs  output.rs
crates/seo/src/wrappers/: keyword.rs  mod.rs  serp.rs  website.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: docs_map.json
scripts/: install.sh
