[package]
name = "seo"
version = "0.1.4"
edition = "2021"
description = "OpenAPI-driven DataForSEO API CLI (plus workflow wrappers)"
readme = "../../README.md"
homepage = "https://github.com/radjathaher/seo-cli"
repository = "https://github.com/radjathaher/seo-cli"
keywords = ["seo", "dataforseo", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["string", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.2"
tokio = { version = "1.37", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4"
